# btpanel-skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: servers.yaml
scripts/: build_skills.py
skills/btpanel/bt_common/: config.py
skills/btpanel/bt_common/scripts/: bt-config.py
skills/btpanel/scripts/: bt-config.py
src/bt_common/: __init__.py
tests/: test_bt_client.py
